# mtgcdb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/mtgcdb/: __init__.py  card.py  db.py  mtgcdb.py
tests/: test_db.py  test_mtgcdb.py
